May 01 1998	 Fix bug for pdb starting with residue number larger than 1
	         Properly deallocate heap memory
		 Correction handling single atom first molecule
May 05 1998	 Minor changes and bug fixes
May 15 1998	 Bug fix in declaration
Jun 03 1998      Change pre_namamb to pre_rename
	         No partial charge estimation if atom types unresolved
		 Bug fix in atom type string comparison in pre_ffield
Jun 04 1998      Bug fix in atom typing (pre_atype)
		 Charge determination separate for each segment (pre_charge)
		 Charge constraint of zero on set of cap atoms (pre_charge)
		 Handle charmm improper dihedrals (pre_ffield)
		 List atoms not found (pre_misfit)
	         Rename residues (CYS,HIS) appropriately for force field
 	         Bug fix in index to array cseq (pre_rename)
Jun 05 1998	 Bug fix in residue renaming (pre_rename)
Jun 08 1998	 Compliance with util_print
Jun 09 1998	 Avoid geom_rtdb_load error message
Jun 11 1998	 Add topology modification commands
		 Fix bugs in reading solvent from pdb file
		 Keep name file
Jun 15 1998	 Bug fixes: pre_boxsiz, pre_orient, pre_wrtrst, pre_wrttop
Jun 24 1998	 Fix memory problem occurring in solvent-only preparations
Jul 09 1998      Add positional fix commands
                 Slightly increase hydrogen radius
Jul 14 1998	 Add routine to determine if a segment is amino acid (pre_protein)
		 Put modified residue name on sequence file
		 Number non chain link atoms from 3 up ( instead of all being 3)
		 Fix file name problem in pre_mkrst
		 Expand link array to include global atom number
		 Fix bug in solvation routine
	         Fix bug in bonded list overwrite in pre_mkfrg
		 More diagnostic messages added
		 Fix file name bug in explicit write rst command
Jul 15 1998	 Remove persistency new_top new_seq and new_rst
		 Resize solvent arrays when needed to read rst file
		 Allow coordinate read before solvation
		 Avoid write of ccordinates if explicit command given