@@ -65,3 +65,5 @@ Jul 15 1998	 Remove persistency new_top new_seq and new_rst
 		 Resize solvent arrays when needed to read rst file
 		 Allow coordinate read before solvation
 		 Avoid write of ccordinates if explicit command given
+		 Bug fix in restart file name
+                 Read modified restart format
